# 8bit-duels

./: ..gitignore.un~  .gitignore  Cargo.toml  FONT_LICENCE  LICENSE  README.md  cards.txt
.github/workflows/: cloc.yml  lines_of_code.yml  rust.yml
client/: Cargo.toml  config.json
client/assets/: Monocraft.kayak_font  config.ron  stylesheet.ess
client/src/: .main.rs.swp  .main.rs.un~  .tilemap.rs.un~  .ui.rs.un~  \  animations.rs  audio.rs  card_interactions.rs  config.rs  currency.rs  debug.rs  main.rs  main.rs~  opening.rs  ownership_indicator.rs  stun_indicator.rs  tilemap.rs  tilemap.rs~  ui.rs  utils.rs
client/src/game/: .card.rs.un~  .card_interactions.rs.un~  .mod.rs.un~  card.rs  card.rs~  card_interactions.rs  card_interactions.rs~  mod.rs
client/src/net/: .input.rs.un~  .mod.rs.un~  .packet_handler.rs.swp  .packet_handler.rs.un~  .packets.rs.un~  input.rs  input.rs~  mod.rs  mod.rs~  out.rs  packet_handler.rs  packet_handler.rs~  packets.rs  packets.rs~
client/src/ui/: before_game.rs  config.rs  in_game_ui.rs  main_menu.rs  settings.rs  widgets.rs
client/tests/: byteorder-test.rs  egui-test.rs  json-test.rs  kayak_ui_test.rs
common/: Cargo.toml
common/src/: card.rs  lib.rs  messages.rs
installer/: main.py
server/: .Cargo.toml.un~  Cargo.toml  Cargo.toml~
server/src/: .de_utils.rs.un~  .main.rs.swp  .main.rs.un~  .utils.rs.un~  main.rs  main.rs~  utils.rs  utils.rs~
server/src/game/: .card.rs.un~  .mod.rs.un~  card.rs  card.rs~  mod.rs  mod.rs~  player_deck.rs
server/src/net/: .packets.rs.un~  .threads.rs.un~  client.rs  mod.rs  packets.rs  packets.rs~  threads.rs  threads.rs~
