[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[test]]
name = "tests"
path = "tests/kayak_ui_test.rs"
harness = false

[dependencies]
bevy = {version="0.9.0"}
bevy_egui = "0.17.0"
bevy-inspector-egui = "0.14"
kayak_ui = { git = "https://github.com/StarArawn/kayak_ui/", rev = "97c02526cec9999e7fc6dccc778b72f2ffd455be"}
serde = "1.0.144"
serde_json = "1.0.83"
byteorder = "1"
common = { path = "../common" }
bevy_pkv = "0.6.0"

