[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[test]]
name = "tests"
path = "tests/kayak_ui_test.rs"
harness = false

[dependencies]
bevy = {version="0.9.0"}
bevy_egui = "0.17.0"
bevy-inspector-egui = "0.14"
serde = "1.0.144"
serde_json = "1.0.83"
byteorder = "1"
common = { path = "../common" }
bevy_pkv = "0.6.0"

