[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[test]]
name = "tests"
path = "tests/kayak_ui_test.rs"
harness = false

[features]
default = ["bevy/animation", "bevy/bevy_asset", "bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_pbr", "bevy/bevy_gltf", "bevy/bevy_render", "bevy/bevy_sprite", "bevy/bevy_text", "bevy/bevy_ui", "bevy/png", "bevy/hdr", "bevy/zstd", "bevy/x11", "bevy/ktx2", "bevy/filesystem_watcher"]

[dependencies]
bevy = {version="0.9.1", default-features=false}
bevy_egui = "0.19.0"
bevy_kira_audio={version="0.14", features=["mp3"], default-features=false}
bevy-inspector-egui = "0.17"
belly = { git = "https://github.com/ThousandthStar/belly-no-button-color" }
serde = "1.0.144"
serde_json = "1.0.83"
byteorder = "1"
common = { path = "../common" }
bevy_pkv = "0.6.0"
ron = "0.8.0"
gag = "1.0.0"

