[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.82"
closure = "0.3.0"
log = "0.4"
simple_logger = "4.0.0"
byteorder = "1"
